fix: fix layout problems

--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -26,8 +26,10 @@
     }
 
     @include on-mobile {
-      bottom: -185px;
-      right: -316px;
+      left: unset;
+      top: unset;
+      bottom: 0;
+      right: -58px;
 
     }
 
