--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -14,8 +14,8 @@
 
   &__close {
     display: flex;
-    bottom: 43px;
-    right: 33px;
+    bottom: 85px;
+    right: 0;
     position: absolute;
     transform: rotate(-90deg);
     align-items: center;
@@ -30,7 +30,13 @@
     &__line {
       width: 44px;
       height: 1px;
-      background-color: aliceblue;
+      background-color: #fff;
+    }
+
+    &__text {
+      @extend %s5-font;
+
+      color: #fff;
     }
   }
 }
@@ -60,6 +66,7 @@
 
     &-item {
       @extend %s3-font;
+
       color: white;
     }
   }
